[package]
name = "egui-video"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/imzacm/egui-video"
readme = "README.md"
authors = ["n00kii", "imzacm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
from_bytes = ["dep:tempfile"]
# will compile sdl2 for you if you do not have it
# this may require other dependancies (see https://github.com/Rust-SDL2/rust-sdl2#bundled-feature)
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
egui = "0.33"
atomic = "0.6.0"
bytemuck = { version = "1.19", features = ["derive"]}
ffmpeg-next = "8"
anyhow = "1.0.86"
timer = "0.2.0"
chrono = "0.4.38"
tempfile = { version = "3.12.0", optional = true }
sdl2 = { version = "0.38.0" }
ringbuf = "0.4.4"
parking_lot = "0.12.3"
itertools = "0.14.0"
nom = "7.1.3"

[dev-dependencies]
rfd = "0.15.0"
eframe = "0.33"
